development/dissipation-theory--Study-3.ipynb: Try, fail, to exactly reproduce Figure 9(b) and Figure 7(b) of Lekkala2013.  Use WebPlotDigitizer to read points off the plots in Lekkala2013 as csv files.  Plot the csv data on top of my calculations.

--- a/development/dissipation-theory--Study-2.ipynb
+++ b/development/dissipation-theory--Study-2.ipynb
@@ -11,7 +11,7 @@
     "* Author: John A. Marohn\n",
     "* Date: 2023-09-12\n",
     "* Continued from: `dissipation-theory--Study-1.ipynb`\n",
-    "* Continued to: ---\n",
+    "* Continued to: `dissipation-theory--Study-3.ipynb`\n",
     "* Summary: Explore Lekkala and Loring's theory for friction over a semiconductor backed by a metal."
    ]
   },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "id": "02c4c40f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f4cc31f9",
    "metadata": {},
    "outputs": [],
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e9cc62bf-c681-4177-b780-c8489cffd137",
+   "execution_count": 5,
+   "id": "6f0252a1-ee42-46a3-affd-90204ea8be1f",
    "metadata": {},
    "outputs": [],
    "source": [
