development/dissipation-theory--Study-5: I can speed up the computation of parallel dissipation over sample2 by about 75-fold using numba and jit.  Writing numba/jit-compatible nested classes was quite tricky.  Move the pure-Python versions of the classes to dissipation.py.

--- a/development/dissipation-theory--Study-4.ipynb
+++ b/development/dissipation-theory--Study-4.ipynb
@@ -11,8 +11,8 @@
     "* Author: John A. Marohn\n",
     "* Date: 2023-09-25\n",
     "* Continued from: `dissipation-theory--Study-3.ipynb`\n",
-    "* Continued to: ---\n",
-    "* Look at ways to cut down code redundancy in the code in `dissipation-theory--Study-3.ipynb`.  I would *greatly* simplify my code if the sample object would update the diffusion length automatically when the mobility or cantilever period was updated.\n",
+    "* Continued to: `dissipation-theory--Study-5.ipynb`\n",
+    "* Look at ways to cut down redundancy in the code in `dissipation-theory--Study-3.ipynb`.  I would *greatly* simplify my code if the sample object would update the diffusion length automatically when the mobility or cantilever period was updated.  Compute dissipation versus charge density, reproducing Figure 7(b) in Lekkala 2013 (*JCP* 139:184702).\n",
     "\n",
     "Research the python `@property` decorator.  Some useful discussions:\n",
     "\n",
@@ -1553,9 +1553,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9b39a58-fd29-43f8-bca4-593fb10b2357",
+   "metadata": {},
+   "source": [
+    "# Discussion\n",
+    "\n",
+    "We are looking to use the theory in Lekkala 2013 (*JCP* 139:184702) to interpret measurements of non-contact that Virginia and Chris have made over lead-halide perovskite films, as a function of distance and light intensity (i.e., charge density).  Above I have coded the Lekkala2013 paper’s friction formulas in a Python.  I used https://automeris.io/WebPlotDigitizer/  to extract data points from Figures 7(b) and 9(b) in the paper to compare to my calculations. \n",
+    " \n",
+    "As we can see in the above figure, I am having trouble reproducing Lekkala2013's Figure 7(b), where friction is calculated versus charge density for a cantilever oscillating parallel to the surface of an infinitely thick semiconductor. Above I tried reproduce the data from one of the datasets in the figure (the sample mobility is given in the figure title).  The large green circles are the paper calculations.  The small purple circles and squares are my calculations, carried out using model 2 (h_d = 0) and Model 1 (d_s = 3000 nm ~ infinity) respectively.  The results of the two models agree with each other over the full density range, but only agree with Lekkala at high charge density.\n",
+    " \n",
+    "I think there is a problem with the Lekkala calculation at low density.  (1) The paper predicts that friction should peak at a critical concentration rho_2, shown as a vertical dashed line in the figure below.  You can see that my calculated frictions indeed peak at a density of rho_2, while Lekkala’s friction peaks at a somewhat higher density. (2)  The paper gives approximate formulas for the friction at low and high density,  the brown solid curves, and the peak friction, the horizontal dotted and dashed lines.  Unfortunately these approximations are an order of magnitude off from any of the numerical calculations.  To derive a better low-density approximation, I expanded the relevant integrand in a Taylor series to second order in both the inverse Debye length and the diffusion length.  As a check, the expansion recovers the Kuehn result in the zero-density limit.  I derived a high-density approximation by expanding in the Debye length, and this high-density expansion is in reasonable agreement with equations 29 and 30 in the paper.  My expansion is plotted as a solid red curve below.  You can see that at low-density the expansion agrees with my numerical calculations, and disagrees with Lekkala’s low-density calculations. \n",
+    " \n",
+    "These two lines of reasoning lead me to question the Lekkala calculation at low density.  I have done some exploratory work plotting the integrand (not shown) and it’s nasty.  If I write the integral using a unitless variable psi and plot the integrand versus psi using a logarithmic x-axis, the integrand often shows two peaks, a narrow one a small psi and a broad one at large psi.  The peaks can have opposite signs.  The Python scipy package takes a surprisingly long time to perform the integrals.  Lekkala2013 eq 21 was straightfroward to program up but eq 17 was not.  First, there are a lot more signs and variables to get right!  Then, to avoid overflow/underflow problems, I had to rewrite the integral in eq 16 in terms of a unitless variable and had to rewrite eq 17 by dividing numerator and denominator by carefully chosen hyperbolic functions.  In summary, I think there are a lot of ways the friction calculation could go wrong."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb69a41c-6f13-4be5-b129-b9756d2273b6",
+   "id": "ccc4d547-a8ed-4a22-b0ce-ba3fed187457",
    "metadata": {},
    "outputs": [],
    "source": []
