--- a/development/dissipation-theory--Study-5.ipynb
+++ b/development/dissipation-theory--Study-5.ipynb
@@ -11,7 +11,7 @@
     "* Author: John A. Marohn\n",
     "* Date: 2023-09-28\n",
     "* Continued from: `dissipation-theory--Study-4.ipynb`\n",
-    "* Continued to: ---\n",
+    "* Continued to: `dissipation-theory--Study-6.ipynb`\n",
     "* Look at ways to speed up the execution of the code in `dissipation-theory--Study-4.ipynb`."
    ]
   },
