development/dissipation-theory--Study-7: Try to reproduce Lekkala 2013 Figure 9(b), perpendicular friction versus charge density, for five values of the imaginary part of the dielectric constant.  The tip-sample separation is not stated in the paper.  Try 300 nm, but the agreement is not good.  Vary the tip-sample separation to optimize agreement with the epsilon = (3.4,0.0) dataset.

--- a/development/dissipation-theory--Study-6.ipynb
+++ b/development/dissipation-theory--Study-6.ipynb
@@ -11,8 +11,8 @@
     "* Author: John A. Marohn\n",
     "* Date: 2023-09-30\n",
     "* Continued from: `dissipation-theory--Study-5.ipynb`\n",
-    "* Continued to: --\n",
-    "* Reproduce the friction $\\gamma_{\\parallel}$ versus charge density $\\rho$ plots in Lekkala2013 Figure 7(b) using the pure-Python functions in `dissipationtheory.dissipation.py`.  The computation below is carried out over 40 charge densities, 4 charge mobilities, and using Model I and Model II in the paper.  The computation in done two ways -- in pure Python and in `numba`-compiled Python.  The computation takes approximately 2.4 min in pure Python and 0.6 s in `numba`-compiled Python."
+    "* Continued to: `dissipation-theory--Study-7.ipynb`\n",
+    "* Reproduce the friction $\\gamma_{\\parallel}$ versus charge density $\\rho$ plots in Lekkala2013 Figure 7(b) using the functions in `dissipationtheory.dissipation.py`.  The computation is carried out over 40 charge densities, for 4 charge mobilities, and using Model I and Model II in the paper.  The computation in done two ways -- in pure Python and in `numba`-compiled Python.  The computation takes approximately 2.4 min in pure Python and 0.6 s in `numba`-compiled Python."
    ]
   },
   {
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0b3d06f3-acb2-451c-8c84-d43dd9860955",
+   "execution_count": null,
+   "id": "b6acc92c-2446-42de-ba27-ebfb8481cfed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,16 @@
     "from dissipationtheory.dissipation import gamma_parallel_approx\n",
     "\n",
     "from dissipationtheory.dissipation import CantileverModelJit, SampleModel1Jit, SampleModel2Jit\n",
-    "from dissipationtheory.dissipation import theta1norm_jit, theta2norm_jit, gamma_parallel_jit\n",
-    "\n",
+    "from dissipationtheory.dissipation import theta1norm_jit, theta2norm_jit, gamma_parallel_jit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c69f6664-ba91-4bab-90f8-8f83509b6867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from tqdm import tqdm\n",
@@ -392,7 +400,7 @@
    "id": "75370f20-f5cc-4eac-89cb-73b953d87295",
    "metadata": {},
    "source": [
-    "Spot check the integrand"
+    "Spot-check the integrand"
    ]
   },
   {
@@ -490,7 +498,7 @@
    "id": "71289116-9ee4-4771-b511-b4edf824d583",
    "metadata": {},
    "source": [
-    "Spot check the integrand."
+    "Spot-check the integrand."
    ]
   },
   {
