development/dissipation-theory--Study-9 and dissipationtheory/dissipation.py: Code up a low-density apprimation for the perpendicular friction and test it against the numerical calculation for a semi-infinite sample, implemented as a SampleModel2 with the height of the overlying dielectric set to zero.  The approximation is quite good but seems to be off by a small unitless factor.  Declare victory for now.

--- a/development/dissipation-theory--Study-7.ipynb
+++ b/development/dissipation-theory--Study-7.ipynb
@@ -9,7 +9,7 @@
     "* Author: John A. Marohn\n",
     "* Date: 2023-10-02\n",
     "* Continued from: `dissipation-theory--Study-6.ipynb`\n",
-    "* Continued to: --\n",
+    "* Continued to: `dissipation-theory--Study-9.ipynb`\n",
     "* Reproduce the friction $\\gamma_{\\perp}$ versus charge density $\\rho$ plots in Lekkala2013 Figure 9(b) using functions in `dissipationtheory.dissipation.py`.\n",
     "\n",
     "The computation below is carried out over 40 charge densities and 5 values of the imaginary dielectric constant $\\epsilon_{\\mathrm{s}}^{\\prime \\prime}$, using a `numba`-compiled Python version of Model II in the paper.  The computation takes less than a second.  \n",
@@ -867,7 +867,7 @@
    "source": [
     "# Simulation (Try 3)\n",
     "\n",
-    "Resimulate the data using the new optimal tip-sample separation, $d =80.0 \\: \\mathrm{nm}$."
+    "Resimulate the data using the new optimal tip-sample separation, $d =100.0 \\: \\mathrm{nm}$."
    ]
   },
   {
