--- a/development/dissipation-theory--Study-9.ipynb
+++ b/development/dissipation-theory--Study-9.ipynb
@@ -9,7 +9,7 @@
     "* Author: John A. Marohn\n",
     "* Date: 2023-10-03\n",
     "* Continued from: `dissipation-theory--Study-7.ipynb`\n",
-    "* Continued to: -- \n",
+    "* Continued to: `dissipation-theory--Study-10.ipynb`\n",
     "* Reproduce the friction $\\gamma_{\\perp}$ versus charge density $\\rho$ plots in Lekkala2013 Figure 9(b) using functions in `dissipationtheory.dissipation.py`.  Add in a low-density approximation."
    ]
   },
