development/dissipation-theory--Study-11.ipynb (oops): Simulate Cohn OPV sample and try multiple fits to Dwyer.  development/dissipation-theory--Study-12.ipynb: Calculate dissipation versus charge density for a representive perovskite sample, and fit to Dwyer; the fit is poor.  development/dissipation-theory--Study-13.ipynb: Plot coutours of the unitless ~a~ parameter as a function of the real and imaginary relative dielectric constant.

--- a/development/dissipation-theory--Study-12.ipynb
+++ b/development/dissipation-theory--Study-12.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "id": "fa9306a5-5577-4818-8882-3e961bf9e40e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "25b040f0-b40a-421c-a0da-357ed4e82ddc",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "32a6230b-78bc-4c1d-baec-cef545adf68b",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "1ba97270-af82-4f54-a21c-c978c42c7f58",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "4df8009f-ac13-414d-961b-f4e1a86f2963",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "0b5f34f4-3b2e-42a5-99e6-6ddab6555ae4",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "e7a9bb88-f2f5-4b90-b945-49ec7337d7c0",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "413a5967-3525-4d90-98d9-af3a0f0b8dbd",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "b4dea9b8-1761-493e-aed7-c336944bb411",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "id": "b8a76fbf-bb5b-4d9e-bec3-bd1ff1e0d85c",
    "metadata": {},
    "outputs": [
@@ -210,8 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 480 ms, sys: 12.9 ms, total: 493 ms\n",
-      "Wall time: 558 ms\n"
+      "CPU times: user 421 ms, sys: 7.19 ms, total: 428 ms\n",
+      "Wall time: 432 ms\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "6ce2aad0-cc6e-48ce-acd8-7879761b5d91",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "id": "2a1640c1-370a-43ef-955e-baeb9db443a9",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "id": "20694460-1ec6-4c5f-966f-3817edc9447f",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "5011d84a-4b92-4e37-9ff0-d017381d40e1",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "68e4b04f-596f-49f7-9b8d-8424a522805b",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "id": "1a3d617c-5114-4e29-b01e-fcd03ace673d",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "6ac1a9e8-d6cf-43bb-a20a-c21e9a5a6d23",
    "metadata": {},
    "outputs": [
@@ -407,10 +407,10 @@
        "<h2>Fit Result</h2> <p>Model: Model(fitfunc)</p> <table class=\"jp-toc-ignore\"><caption class=\"jp-toc-ignore\">Fit Statistics</caption><tr><td style='text-align:left'>fitting method</td><td style='text-align:right'>leastsq</td></tr><tr><td style='text-align:left'># function evals</td><td style='text-align:right'>88</td></tr><tr><td style='text-align:left'># data points</td><td style='text-align:right'>50</td></tr><tr><td style='text-align:left'># variables</td><td style='text-align:right'>2</td></tr><tr><td style='text-align:left'>chi-square</td><td style='text-align:right'> 25761.0621</td></tr><tr><td style='text-align:left'>reduced chi-square</td><td style='text-align:right'> 536.688795</td></tr><tr><td style='text-align:left'>Akaike info crit.</td><td style='text-align:right'> 316.229820</td></tr><tr><td style='text-align:left'>Bayesian info crit.</td><td style='text-align:right'> 320.053866</td></tr><tr><td style='text-align:left'>R-squared</td><td style='text-align:right'>-4.7704e+09</td></tr></table><table class=\"jp-toc-ignore\"><caption>Parameters</caption><tr><th style='text-align:left'>name</th><th style='text-align:left'>value</th><th style='text-align:left'>standard error</th><th style='text-align:left'>relative error</th><th style='text-align:left'>initial value</th><th style='text-align:left'>min</th><th style='text-align:left'>max</th><th style='text-align:right'>vary</th></tr><tr><td style='text-align:left'>kR_unitless</td><td style='text-align:left'> 7.1198e-07</td><td style='text-align:left'> 5.3664e-08</td><td style='text-align:left'>(7.54%)</td><td style='text-align:left'>1e-08</td><td style='text-align:left'> 0.00000000</td><td style='text-align:left'>        inf</td><td style='text-align:right'>True</td></tr><tr><td style='text-align:left'>kC_unitless</td><td style='text-align:left'> 0.02247441</td><td style='text-align:left'> 8.5424e-04</td><td style='text-align:left'>(3.80%)</td><td style='text-align:left'>1e-08</td><td style='text-align:left'> 0.00000000</td><td style='text-align:left'>        inf</td><td style='text-align:right'>True</td></tr></table><table class=\"jp-toc-ignore\"><caption>Correlations (unreported values are < 0.100)</caption><tr><th style='text-align:left'>Parameter1</th><th style='text-align:left'>Parameter 2</th><th style='text-align:right'>Correlation</th></tr><tr><td style='text-align:left'>kR_unitless</td><td style='text-align:left'>kC_unitless</td><td style='text-align:right'>+0.8115</td></tr></table>"
       ],
       "text/plain": [
-       "<lmfit.model.ModelResult at 0x131566e20>"
+       "<lmfit.model.ModelResult at 0x12465eb50>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "aa623f78-d46f-4560-b4aa-c2ab78445d00",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "d33c2c7d-08bc-4dd3-9f5e-db5a1b2a8dcc",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "id": "74f347e4-6283-4f40-86a6-acaa99fd39f9",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "id": "3aa90647-ca8c-4f6c-bb2b-2b93750a394e",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "id": "43aec653-a59f-4817-81a3-b6f854112378",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "id": "a17d7bd8-92cf-485f-bf1c-cb3a615f623f",
    "metadata": {},
    "outputs": [
