Plot cantilever friction versus conductivity, similar to Lekkala 203 Figures 7(b) and 9(b), but for (1) perpendicular friction and (2) plotted versus conductivity and not charge density.

--- a/development/dissipation-theory--Study-23-revised.ipynb
+++ b/development/dissipation-theory--Study-23-revised.ipynb
@@ -196,7 +196,7 @@
    "id": "18cc2ef1-7c8b-4445-b283-5f148cc23fa0",
    "metadata": {},
    "source": [
-    "Vary the mobility, but keep the mobility fixed, which means we must also vary charge density."
+    "Vary the coductivity, but keep the mobility fixed, which means we must also vary charge density."
    ]
   },
   {
