dissipationtheory/dissipation4.py and development/dissipation-theory--Study-29.ipynb: Put the tip charge not at d but at d + R = z_c.  The resulting friction an.

--- a/development/dissipation-theory--Study-28.ipynb
+++ b/development/dissipation-theory--Study-28.ipynb
@@ -1,16 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "a3270841-497a-4ab8-ba82-59a5ae6b91a4",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: Testing `numba/jit` accelerated `dissipation3` functions\n",
+    "author: \"John A. Marohn\"\n",
+    "date: today\n",
+    "abstract: Redo `Study 26` using `numba/jit`-accelerated functions coded in `dissipationtheory.dissipation3`.  The `numba/jit` functions run below are 100 to 200 times faster than their pure-Python counterparts run in `Study 26`, enabling us to plot here a more detailed BLDS spectrum and explore friction and the zero-frequency limit of the BLDS spectrum as a function of many more conductivity points.\n",
+    "toc: true\n",
+    "number-sections: true\n",
+    "highlight-style: pygments\n",
+    "html-math-method: mathjax\n",
+    "embed-resources: true\n",
+    "dpi: 300\n",
+    "format:\n",
+    "    html:\n",
+    "        code-fold: false\n",
+    "        code-tools: true\n",
+    "    pdf:\n",
+    "        geometry: \n",
+    "            - top=1in\n",
+    "            - left=0.5in\n",
+    "            - right=0.5in\n",
+    "            - bottom=1in\n",
+    "    docx: default\n",
+    "jupyter: python3\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c2c386ae-8c9e-4831-987d-5c1b3638f19d",
    "metadata": {},
    "source": [
-    "- Name: `dissipation-theory--Study-28.ipynb`\n",
-    "- Author: John A. Marohn\n",
-    "- Date: 2024-10-13\n",
+    "- Filename: `dissipation-theory--Study-28.ipynb`\n",
     "- Continued from: `dissipation-theory--Study-26.ipynb`\n",
-    "- Continued to: ---\n",
-    "- Summary: Redo `Study 26` using numba/jit-accelerated functions coded in `dissipationtheory.dissipation3`.  The numba/jit functions run below are 100 to 200 times faster than their pure-Python counterparts run in `Study 26`, enabling us to plot here a more detailed BLDS spectrum and explore friction and the zero-frequency limit of the BLDS spectrum as a function of many more conductivity points."
+    "- Continued to: `dissipation-theory--Study-29.ipynb`"
    ]
   },
   {
@@ -103,6 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| echo: true\n",
+    "#| \n",
+    "\n",
     "cantilever = CantileverModel(\n",
     "    f_c = ureg.Quantity(75, 'kHz'),\n",
     "    k_c = ureg.Quantity(2.8, 'N/m'), \n",
@@ -460,7 +491,7 @@
    "id": "8425741b-abed-46f6-9803-f800e8c2c2d9",
    "metadata": {},
    "source": [
-    "By inspection we get the same result for the two terms' contribution to the BDLS frequency shift at the .  Success!\n",
+    "By inspection we get the same result for the two terms' contribution to the BDLS frequency shift.  Success!\n",
     "\n",
     "The numba/jit calculation is 150 to 200 times faster.  "
    ]
@@ -580,7 +611,7 @@
    "id": "91b48b31-c696-4f0b-ac07-72a667a0db40",
    "metadata": {},
    "source": [
-    "Loop over conductivities, computing the BLDS spectrum and the friction.  This takes about "
+    "Loop over conductivities, computing the BLDS spectrum and the friction."
    ]
   },
   {
@@ -814,6 +845,9 @@
     }
    ],
    "source": [
+    "#| label: fig-blds\n",
+    "#| fig-cap: \"Broadband local dielectric spectrum of a semi-infinite semiconductor versus charge density.\"\n",
+    "\n",
     "fig['01'] = plotBLDS(data['01-short'])"
    ]
   },
