dissipationtheory/dissipation4.py and development/dissipation-theory--Study-29.ipynb: The numerical calculation of the low-frequency limit of the BLDS spectrum agrees with the Lorings expansions at both low denstity and high density.  To reach agreement, it is important that the sample be very thick.  In Study 29, it is 100 times the tip-sample separation.

--- a/development/dissipation-theory--Study-28.ipynb
+++ b/development/dissipation-theory--Study-28.ipynb
@@ -26,7 +26,6 @@
     "            - left=0.5in\n",
     "            - right=0.5in\n",
     "            - bottom=1in\n",
-    "    docx: default\n",
     "jupyter: python3\n",
     "---"
    ]
@@ -36,6 +35,12 @@
    "id": "c2c386ae-8c9e-4831-987d-5c1b3638f19d",
    "metadata": {},
    "source": [
+    "The above header is for creating a nicely-formatted `.html` and `.pdf` documents using the program `quarto` ([link](https://quarto.org/)).  To create nicely-formated `.html` and `.pdf` versions of this notebook, run `quarto` from the command line as follows\n",
+    "\n",
+    "    quarto render dissipation-theory--Study-28.ipynb \n",
+    "\n",
+    "Other useful information about this notebook:\n",
+    "\n",
     "- Filename: `dissipation-theory--Study-28.ipynb`\n",
     "- Continued from: `dissipation-theory--Study-26.ipynb`\n",
     "- Continued to: `dissipation-theory--Study-29.ipynb`"
@@ -306,8 +311,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.99 ms, sys: 231 µs, total: 7.22 ms\n",
-      "Wall time: 7.14 ms\n"
+      "CPU times: user 9.86 ms, sys: 1.98 ms, total: 11.8 ms\n",
+      "Wall time: 13.6 ms\n"
      ]
     },
     {
@@ -351,8 +356,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.42 s, sys: 29.5 ms, total: 2.45 s\n",
-      "Wall time: 2.57 s\n"
+      "CPU times: user 2.92 s, sys: 30.7 ms, total: 2.95 s\n",
+      "Wall time: 3.15 s\n"
      ]
     },
     {
@@ -418,8 +423,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28 ms, sys: 2.12 ms, total: 30.1 ms\n",
-      "Wall time: 31.3 ms\n"
+      "CPU times: user 20.1 ms, sys: 1.12 ms, total: 21.3 ms\n",
+      "Wall time: 20.8 ms\n"
      ]
     },
     {
@@ -457,8 +462,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.23 s, sys: 55.4 ms, total: 6.28 s\n",
-      "Wall time: 6.5 s\n"
+      "CPU times: user 7.69 s, sys: 78.3 ms, total: 7.76 s\n",
+      "Wall time: 8.22 s\n"
      ]
     },
     {
@@ -624,8 +629,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.9 s, sys: 109 ms, total: 12 s\n",
-      "Wall time: 12.1 s\n"
+      "CPU times: user 16.4 s, sys: 179 ms, total: 16.6 s\n",
+      "Wall time: 17.8 s\n"
      ]
     }
    ],
