development/dissipation-theory--Study-31, Study-32, and Study-33.  Use the method of Xu and coworkers to determine a set of image charges representing a sphere and a sphere-plus-cone tip.  For a sphere, the method gives a capacitance and capacitance derivatives that agree with analytical expressions.  For a sphere-plus-cone, reproduce the force over a ground plane, Figure 3 in the paper by Xu and coworkers.  See the writeup in Study-33.

--- a/development/dissipation-theory--Study-30.ipynb
+++ b/development/dissipation-theory--Study-30.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "- Filename: `dissipation-theory--Study-30.ipynb`\n",
     "- Continued from: ---\n",
-    "- Continued to: ---"
+    "- Continued to: `dissipation-theory--Study-31.ipynb`"
    ]
   },
   {
