dissipationtheory/dissipation5.py: Update formulas for BLDS frequency shift and friction to reflect the new Loring theory.  Carry out new evelopment studies.  Study 38 is a test-drive of the new formulas.  The BLDS frequency shift did not show the expected trend with scaled charge density.  In Study 39 I repeat Study 34 using the new code in dissipation5.  The friction behaves as expected but the BLDS frequency shift does not.  In Study 40 I explore the K0, K1, and K2 integrals at zero frequency as a function of charge density and dielectic constant.  I show that each of the K function reaches its half point at a different scaled charge density, which is not what I was expecting to see.  I define a new scaled charge density.

--- a/development/dissipation-theory--Study-34.ipynb
+++ b/development/dissipation-theory--Study-34.ipynb
@@ -438,8 +438,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 57.2 s, sys: 971 ms, total: 58.2 s\n",
-      "Wall time: 1min 3s\n"
+      "CPU times: user 50.9 s, sys: 513 ms, total: 51.4 s\n",
+      "Wall time: 51.9 s\n"
      ]
     }
    ],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "f20d6068",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "3b62b230",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "053c988d",
    "metadata": {},
    "outputs": [],
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "id": "8dd21118",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "12c3790c",
    "metadata": {},
    "outputs": [],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "id": "53f050fb",
    "metadata": {},
    "outputs": [
@@ -1026,8 +1026,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 50s, sys: 4.14 s, total: 3min 54s\n",
-      "Wall time: 4min 17s\n"
+      "CPU times: user 3min 23s, sys: 1.98 s, total: 3min 25s\n",
+      "Wall time: 3min 31s\n"
      ]
     }
    ],
@@ -1300,8 +1300,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 45s, sys: 4.54 s, total: 3min 49s\n",
-      "Wall time: 4min 16s\n"
+      "CPU times: user 3min 18s, sys: 1.69 s, total: 3min 20s\n",
+      "Wall time: 3min 24s\n"
      ]
     }
    ],
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "id": "cc073a76",
    "metadata": {},
    "outputs": [],
