dissipationtheory/dissipation8a.py, dissipationtheory/dissipation8b.py, and development/dissipation-theory--Study-44: New functions for calculating thetaI, thetaII, and Kn.  The new thetaI and thetaII are now well behaved at zero frequeny.  Ths cantilever and sample objects in 8a and 8b are simpler than in prior code.  The thetaI, thetaII, and Kn function calls are different from before.

--- a/development/dissipation-theory--Study-43.ipynb
+++ b/development/dissipation-theory--Study-43.ipynb
@@ -9,7 +9,7 @@
     "title: Representative BLDS spectra and perpendicular friction plotted versus unitless parameters.\n",
     "author: \"John A. Marohn\"\n",
     "date: today\n",
-    "abstract: Repeat the Study 39 analysis using Loring's new 2025-05-14 formulas implemented in the dissipation7.py code.  The new formula correctly predicts a dc cantilever frequency shift that increases with increasing charge density (light intensity).\n",
+    "abstract: Repeat the Study 39 analysis using Loring's new 2025-05-14 formulas implemented in the `dissipation7.py` code.  The new formula correctly predicts a dc cantilever frequency shift that increases with increasing charge density (light intensity).\n",
     "toc: true\n",
     "number-sections: true\n",
     "highlight-style: pygments\n",
@@ -517,8 +517,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 42 s, sys: 582 ms, total: 42.6 s\n",
-      "Wall time: 52.9 s\n"
+      "CPU times: user 27.8 s, sys: 299 ms, total: 28.1 s\n",
+      "Wall time: 29.1 s\n"
      ]
     }
    ],
@@ -741,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.2"
   },
   "toc": {
    "base_numbering": 1,
